--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beelovedshouse - Cute Digital Art & Heartwarming Stories</title>
+    <title>Beelovedshouse</title>
     <meta name="description" content="Discover magical digital wallpapers, adorable storybooks, and charming accessories inspired by 'My Shepherd and I'. Shop cute, heartwarming products with soft pastel designs." />
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Beelovedshouse - Cute Digital Art & Heartwarming Stories" />
+    <meta property="og:title" content="Beelovedshouse" />
     <meta property="og:description" content="Discover magical digital wallpapers, adorable storybooks, and charming accessories inspired by 'My Shepherd and I'. Shop cute, heartwarming products with soft pastel designs." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og.jpg" />
