🚀 Complete E-commerce Implementation - Amazon-Style Seamless Experience
✅ Complete Routing System - All 19+ pages now accessible
✅ Removed All Loading Screens - Instant content delivery like Amazon
✅ Seamless User Experience - No artificial delays or processing states
✅ Performance Optimizations - Lazy loading images, removed heavy assets
✅ Full Navigation - Header links work across all pages
✅ Checkout Flow - Immediate processing without loading states
✅ Responsive Design - Mobile-friendly across all components

Key Changes:
- Added complete routing for all product categories and info pages
- Removed background image loading delays from Hero component
- Eliminated newsletter popup delays for instant loading
- Removed 'Processing...' text from checkout for seamless UX
- Added lazy loading to product images
- Fixed AppContext provider setup
- Cleaned up unused imports and optimized components

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:description" content="Discover magical digital wallpapers, adorable storybooks, and charming accessories inspired by 'My Shepherd and I'. Shop cute, heartwarming products with soft pastel designs." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og.jpg" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
 
   <body>
